Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123015

When configuring with -no-qml-debug then it will fail to build QtQuick3D

XMLWordPrintable

    • aa937e6fb (dev), 36a3ca350 (6.7), bbf0741ac (6.6), 3c7328e0a (tqtc/lts-6.5)

      When configuring with -no-qml-debug then it will fail to build QtQuick3D with the following error:



      
     /RTC1 -MDd /W3 /EHs-c- /wd4530 /wd4577 -Zc:__cplusplus -permissive- -utf-8 -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:ternary -Zc:externConstexpr -Zc:wchar_t -bigobj -std:c++17 /YuD:/dev/qt654/qtquick3d/src/utils/CMakeFiles/Quick3DUtils.dir/Debug/cmake_pch.hxx /FpD:/dev/qt654/qtquick3d/src/utils/CMakeFiles/Quick3DUtils.dir/Debug/cmake_pch.cxx.pch /FID:/dev/qt654/qtquick3d/src/utils/CMakeFiles/Quick3DUtils.dir/Debug/cmake_pch.hxx /showIncludes /Foqtquick3d\src\utils\CMakeFiles\Quick3DUtils.dir\Debug\qquick3dprofiler.cpp.obj /Fdqtquick3d\src\utils\CMakeFiles\Quick3DUtils.dir\Debug\ /FS -c D:\dev\qt-everywhere-src-6.5.4\qtquick3d\src\utils\qquick3dprofiler.cpp
D:\dev\qt-everywhere-src-6.5.4\qtquick3d\src\utils\qquick3dprofiler.cpp(6): fatal error C1083: Cannot open include file: 'QtQml/private/qqmlabstractprofileradapter_p.h': No such file or directory


        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            inho Inho Lee
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes