Fix build-failure with no-qml-debug

A dependency on qml_debug was not properly set.

Fixes: QTBUG-123015
Change-Id: I238d538229d86f96a992221037485c23310ac4da
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
(cherry picked from commit aa937e6fb5c20dcd3d5d45d46cf3128f935c8b2c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 36a3ca350cfb9f2628921515c09f2f905090e89b)
(cherry picked from commit bbf0741ac26691989e093ae95d220fdde32217c2)